Fix overlap main and background text

--- a/styles/main.css
+++ b/styles/main.css
@@ -87,6 +87,8 @@ nav > ul > li > a:hover {
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   border-top: 2px solid teal;
+  box-sizing: border-box;
+  z-index: 1;
 }
 
 .dropdown-content a {
@@ -117,6 +119,8 @@ nav > ul > li > a:hover {
   padding: 0 auto;
   text-align: center;
   opacity: 0.7;
+  position: relative;
+  z-index: -1;
 }
 
 .main-quote {
